--- a/docker/nifi/Dockerfile
+++ b/docker/nifi/Dockerfile
@@ -5,7 +5,7 @@ USER root
 # Install gNMIc
 RUN bash -c "$(curl -sL https://get-gnmic.kmrd.dev)"
 
-RUN apt-get update
+RUN apt-get --allow-releaseinfo-change update
 
 # Install Python3
 RUN apt-get install -y python3 python3-pip
