[S-113] Upgrade NiFI to 1.14
NiFiClient update accordingly

--- a/docker-compose-gnmi.yml
+++ b/docker-compose-gnmi.yml
@@ -99,6 +99,10 @@ services:
     hostname: nifi
     container_name: nifi
     user: root
+    environment:
+      SINGLE_USER_CREDENTIALS_USERNAME: admin
+      # Must be of 12 characters min
+      SINGLE_USER_CREDENTIALS_PASSWORD: ctsBtRBKHRAx69EqUghvvgEvjnaLjFEB
     ports:
       - "8080:8080"
     volumes:
