--- a/semantic-tools/pyproject.toml
+++ b/semantic-tools/pyproject.toml
@@ -10,6 +10,7 @@ pydantic = "^1.8.2"
 nipyapi = "^0.16.2"
 PyYAML = "^5.4.1"
 requests = "^2.26.0"
+flake8 = "^3.9.2"
 
 
 [tool.poetry.dev-dependencies]
