[s-107] Uploading PrometheusDriver NiFi processor .nar file and updating NiFi docker service in docker-compose files

--- a/docker-compose-gnmi.yml
+++ b/docker-compose-gnmi.yml
@@ -108,6 +108,7 @@ services:
     volumes:
       - ./gnmi/gnmic-cfgs:/gnmic-cfgs
       - ./docker/nifi:/opt/aggregator
+      - ./docker/nifi/drivers/nars:/opt/nifi/nifi-current/extensions
   postgres:
     image: mdillon/postgis
     hostname: postgres
