[S-96] Upload NiFi template for PrometheusExporter with dynamic context

--- a/docker/prometheus/config/prometheus.yml
+++ b/docker/prometheus/config/prometheus.yml
@@ -43,11 +43,11 @@ scrape_configs:
   - job_name: 'nifi'
 
     scrape_interval: 5s
-    metrics_path: '/my-metric'
+    metrics_path: '/metrics/demo-endpoint'
 
     static_configs:
       - targets: ['nifi:8444']
- 
+
   # REQUIRES configuring docker daemon.json
   # - job_name: 'docker'
   #        # metrics_path defaults to '/metrics'
