--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -140,6 +140,7 @@ services:
       - ./gnmi/gnmic-cfgs:/gnmic-cfgs
       - ./docker/nifi:/opt/aggregator
       - ./docker/nifi/drivers/nars:/opt/nifi/nifi-current/extensions
+      - ./docker/nifi/drivers/yang-models:/opt/nifi/yang-models
   node-exporter-1:
     image: prom/node-exporter
     hostname: node-exporter-1
