--- a/docker-compose-nifi.yml
+++ b/docker-compose-nifi.yml
@@ -7,10 +7,12 @@ services:
     hostname: nifi
     container_name: nifi
     user: root
-    environment: 
+    environment:
       SINGLE_USER_CREDENTIALS_USERNAME: admin
       # Must be of 12 characters min
       SINGLE_USER_CREDENTIALS_PASSWORD: ctsBtRBKHRAx69EqUghvvgEvjnaLjFEB
+      NIFI_JVM_HEAP_INIT: 4g
+      NIFI_JVM_HEAP_MAX: 6g
     ports:
       - "8443:8443"
       # Used by Prometheus exporter
