Implement data-lake-explorer logic

--- a/docker/data-lake-explorer/Dockerfile
+++ b/docker/data-lake-explorer/Dockerfile
@@ -28,6 +28,5 @@ COPY --from=builder /venv /venv
 COPY ./docker/docker-entrypoint.sh /docker-entrypoint.sh
 RUN chmod +x /docker-entrypoint.sh
 
-EXPOSE 8000
 ENTRYPOINT /docker-entrypoint.sh $0 $@
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload", "--log-config", "config/log.yaml"]
+CMD ["python", "main.py"]
