--- a/semantic-tools/pyproject.toml
+++ b/semantic-tools/pyproject.toml
@@ -5,15 +5,14 @@ description = "Tools for the semantic data aggregator components"
 authors = ["GIROS-DIT UPM <gi.giros@upm.es>"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.9,<4.0"
 pydantic = "^1.8.2"
 nipyapi = "^0.16.2"
 PyYAML = "^5.4.1"
 requests = "^2.26.0"
-flake8 = "^3.9.2"
-
 
 [tool.poetry.dev-dependencies]
+flake8 = "^3.9.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
