Docker-compose file for CLARITY. Include data-lake-explorer service

--- a/docker/data-lake-explorer/Dockerfile
+++ b/docker/data-lake-explorer/Dockerfile
@@ -1,32 +1,41 @@
-FROM python:3.8.12-slim-buster as base
+# Based on https://stackoverflow.com/a/57886655
+FROM python:3.9-slim-buster as base
 
 ENV PYTHONFAULTHANDLER=1 \
     PYTHONHASHSEED=random \
     PYTHONUNBUFFERED=1
 
-WORKDIR /app
+# Set hierarchy with folders
+ENV APP_NAME=data-lake-explorer
+ENV APP_DIR=/opt/sda/${APP_NAME}
+RUN mkdir -p ${APP_DIR}
+WORKDIR ${APP_DIR}
 
 FROM base as builder
 
 ENV PIP_DEFAULT_TIMEOUT=100 \
     PIP_DISABLE_PIP_VERSION_CHECK=1 \
     PIP_NO_CACHE_DIR=1 \
-    POETRY_VERSION=1.0.5
+    POETRY_VERSION=1.1.13
 
 RUN pip install "poetry==$POETRY_VERSION"
 RUN python -m venv /venv
 
-COPY pyproject.toml poetry.lock ./
-RUN poetry export -f requirements.txt | /venv/bin/pip install -r /dev/stdin
+# Copy semantic-tools dependency
+RUN mkdir -p /opt/semantic-tools
+COPY semantic-tools /opt/semantic-tools
+# Copy app artifacts
+COPY docker/${APP_NAME}/pyproject.toml docker/${APP_NAME}/poetry.lock ./
+RUN poetry export -f requirements.txt --without-hashes | /venv/bin/pip install -r /dev/stdin
 
-COPY . .
+COPY docker/${APP_NAME}/ .
 RUN poetry build && /venv/bin/pip install dist/*.whl
 
-FROM base as development
+FROM base as final
 
 COPY --from=builder /venv /venv
-COPY ./docker/docker-entrypoint.sh /docker-entrypoint.sh
-RUN chmod +x /docker-entrypoint.sh
+COPY --from=builder ${APP_DIR} .
+COPY docker/${APP_NAME}/docker-entrypoint.sh .
+RUN chmod +x docker-entrypoint.sh
 
-ENTRYPOINT /docker-entrypoint.sh $0 $@
-CMD ["python", "main.py"]
+CMD ["./docker-entrypoint.sh"]
