--- a/docker/data-lake-explorer/pyproject.toml
+++ b/docker/data-lake-explorer/pyproject.toml
@@ -5,13 +5,14 @@ description = ""
 authors = ["Ignacio Dominguez Martinez-Casanueva <i.dominguezm@alumnos.upm.es>"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
-semantic-tools = { path = "../../semantic-tools", develop = true }
+python = ">=3.9,<4.0"
+semantic-tools = "^0.1.0"
 lxml = "^4.7.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 flake8 = ">=4.0.1"
+semantic-tools = { path = "../../semantic-tools", develop = true }
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
