--- a/docker-compose-stream-processing.yml
+++ b/docker-compose-stream-processing.yml
@@ -2,15 +2,25 @@ version: '3'
 services:
   app-manager:
     build:
-        context: ./app-manager
-        dockerfile: Dockerfile
+        context: .
+        dockerfile: ./docker/app-manager/Dockerfile
     hostname: app-manager
     container_name: app-manager
+    environment:
+      - APP_MANAGER_URI=${APP_MANAGER_URI}
+      - BROKER_URI=${BROKER_URI}
+      - CONTEXT_CATALOG_URI=${CONTEXT_CATALOG_URI}
+      - FLINK_MANAGER_URI=${FLINK_MANAGER_URI}
+      - NIFI_URI=${NIFI_URI}
+      - NIFI_USERNAME=${NIFI_USERNAME}
+      - NIFI_PASSWORD=${NIFI_PASSWORD}
     ports:
       - "8082:8080"
     volumes:
-      - ./app-manager/app:/app
-      - ./app-manager/catalog:/catalog
+      - ./docker/app-manager/app_manager:/opt/sda/app-manager/app_manager
+    depends_on:
+      - nifi
+      - scorpio
   # consumer:
   #   build:
   #     context: ./consumer
