--- a/docker-compose-stream-processing.yml
+++ b/docker-compose-stream-processing.yml
@@ -157,11 +157,20 @@ services:
       - postgres
   weaver:
     build:
-      context: ./weaver
+      context: .
+      dockerfile: ./docker/weaver/Dockerfile
     hostname: weaver
     container_name: weaver
+    environment:
+      - BROKER_URI=${BROKER_URI}
+      - CONTEXT_CATALOG_URI=${CONTEXT_CATALOG_URI}
+      - FLINK_MANAGER_URI=${FLINK_MANAGER_URI}
+      - NIFI_URI=${NIFI_URI}
+      - NIFI_USERNAME=${NIFI_USERNAME}
+      - NIFI_PASSWORD=${NIFI_PASSWORD}
+      - WEAVER_URI=${WEAVER_URI}
     volumes:
-      - ./weaver/app:/app
+      - ./docker/weaver/weaver:/opt/sda/weaver/weaver
     depends_on:
       - nifi
       - scorpio
