Migrate consumer to poetry structure

--- a/docker-compose-prometheus.yml
+++ b/docker-compose-prometheus.yml
@@ -30,7 +30,7 @@ services:
     ports:
       - "8080"
     volumes:
-      - ./docker/consumer/app:/opt/consumer/app
+      - ./docker/consumer/consumer:/opt/sda/consumer/consumer
   context-catalog:
     image: halverneus/static-file-server
     hostname: context-catalog
