--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -89,10 +89,14 @@ services:
       dockerfile: ./docker/experimenter/Dockerfile
     hostname: experimenter
     container_name: experimenter
+    environment:
+      - BROKER_URI=${BROKER_URI}
+      - CONTEXT_CATALOG_URI=${CONTEXT_CATALOG_URI}
+      - EXPERIMENTER_URI=${EXPERIMENTER_URI}
     ports:
       - "8080"
     volumes:
-      - ./docker/experimenter/app:/opt/experimenter/app
+      - ./docker/experimenter/experimenter:/opt/sda/experimenter/experimenter
   flink-jobmanager:
     image: flink:1.14.0-scala_2.12-java11
     hostname: flink-jobmanager
