--- a/docker-compose-nifi.yml
+++ b/docker-compose-nifi.yml
@@ -8,9 +8,9 @@ services:
     container_name: nifi
     user: root
     environment:
-      SINGLE_USER_CREDENTIALS_USERNAME: admin
+      SINGLE_USER_CREDENTIALS_USERNAME: ${NIFI_USERNAME}
       # Must be of 12 characters min
-      SINGLE_USER_CREDENTIALS_PASSWORD: ctsBtRBKHRAx69EqUghvvgEvjnaLjFEB
+      SINGLE_USER_CREDENTIALS_PASSWORD: ${NIFI_PASSWORD}
       NIFI_JVM_HEAP_INIT: 4g
       NIFI_JVM_HEAP_MAX: 6g
     ports:
