Upgrade to Scorpio 2.1. Include eureka and gateway services

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # SDA services information
 APP_MANAGER_URI=http://app-manager:8080
 
-BROKER_URI=http://scorpio:9090
+BROKER_URI=http://gateway:9090
 
 CONTEXT_CATALOG_URI=http://context-catalog:8080/context.jsonld
 
