--- a/docker-compose-prometheus.yml
+++ b/docker-compose-prometheus.yml
@@ -39,6 +39,12 @@ services:
       - "8080"
     volumes:
       - ./docker/context-catalog:/web
+  eureka:
+    image: scorpiobroker/scorpio:eureka-server_2.1.1
+    hostname: eureka
+    container_name: eureka
+    ports:
+      - "8761"
   experimenter:
     build:
       context: .
@@ -53,6 +59,14 @@ services:
       - "8080"
     volumes:
       - ./docker/experimenter/experimenter:/opt/sda/experimenter/experimenter
+  gateway:
+    image: scorpiobroker/scorpio:gateway_aaio_2.1.1
+    hostname: gateway
+    container_name: gateway
+    ports:
+      - "9090:9090"
+    depends_on:
+      - eureka
   flink-jobmanager:
     image: flink:latest
     hostname: flink-jobmanager
@@ -79,20 +93,24 @@ services:
         jobmanager.rpc.address: flink-jobmanager
         taskmanager.numberOfTaskSlots: 2
   kafka:
-    image: wurstmeister/kafka
+    image: bitnami/kafka
     hostname: kafka
     container_name: kafka
     ports:
-      - "9092:9092"
+      - "9092"
     environment:
       KAFKA_ADVERTISED_HOST_NAME: kafka
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_ADVERTISED_PORT: 9092
-      KAFKA_LOG_DIRS: "/tmp/kafka-logs"
+      KAFKA_LOG_RETENTION_MS: 10000
+      KAFKA_LOG_RETENTION_CHECK_INTERVAL_MS: 5000
+      ALLOW_PLAINTEXT_LISTENER: "yes"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     depends_on:
       - zookeeper
+    logging:
+      driver: none
   nifi:
     build:
       context: .
@@ -131,7 +149,7 @@ services:
     depends_on:
       - prometheus
   postgres:
-    image: mdillon/postgis
+    image: postgis/postgis
     hostname: postgres
     container_name: postgres
     ports:
@@ -151,14 +169,16 @@ services:
     volumes:
       - ./docker/prometheus/config/prometheus.yml:/etc/prometheus/prometheus.yml
   scorpio:
-    image: scorpiobroker/scorpio:scorpio-aaio_FIWARE_7.9.2
+    image: scorpiobroker/scorpio:scorpio-aaio_2.1.1
     hostname: scorpio
     container_name: scorpio
     ports:
-      - "9090:9090"
+      - "27015"
     depends_on:
-      - kafka
+      - gateway
+      - eureka
       - postgres
+      - kafka
   weaver:
     build:
       context: .
@@ -186,4 +206,3 @@ services:
       - "2181"
     logging:
       driver: none
-    working_dir: /
