--- a/docker-compose-prometheus.yml
+++ b/docker-compose-prometheus.yml
@@ -2,8 +2,8 @@ version: '3'
 services:
   app-manager:
     build:
-        context: .
-        dockerfile: ./docker/app-manager/Dockerfile
+      context: .
+      dockerfile: ./docker/app-manager/Dockerfile
     hostname: app-manager
     container_name: app-manager
     environment:
@@ -193,6 +193,8 @@ services:
       - NIFI_USERNAME=${NIFI_USERNAME}
       - NIFI_PASSWORD=${NIFI_PASSWORD}
       - WEAVER_URI=${WEAVER_URI}
+    ports:
+      - "8080"
     volumes:
       - ./docker/weaver/weaver:/opt/sda/weaver/weaver
     depends_on:
