Modified the context directory of the GoFlow2 service in docker-compose-palantir file

--- a/docker-compose-palantir.yml
+++ b/docker-compose-palantir.yml
@@ -163,8 +163,8 @@ services:
       driver: none
   goflow2:
     build:
-       context: .
-       dockerfile: ./docker/goflow2-collector/Dockerfile
+       context: ./docker/goflow2-collector
+       dockerfile: Dockerfile
     hostname: goflow2
     container_name: goflow2
     ports:
