--- a/docker/goflow2-collector/Dockerfile
+++ b/docker/goflow2-collector/Dockerfile
@@ -4,15 +4,14 @@ ARG LDFLAGS=""
 ENV GO111MODULE=on 
 RUN apk --update --no-cache add git build-base gcc
 
-COPY docker/goflow2-collector /build
 WORKDIR /build
 
-COPY docker/goflow2-collector/go.mod ./
-COPY docker/goflow2-collector/go.sum ./
+COPY go.mod .
+COPY go.sum .
 RUN go mod download
 
 COPY . .
-RUN go build -ldflags "${LDFLAGS}" -o goflow2 docker/goflow2-collector/cmd/goflow2/main.go
+RUN go build -ldflags "${LDFLAGS}" -o goflow2 ./cmd/goflow2/main.go
 
 FROM alpine:latest
 ARG src_dir
@@ -37,7 +36,7 @@ LABEL org.opencontainers.image.revision="${REV}"
 RUN apk update --no-cache && \
     adduser -S -D -H -h / flow
 USER flow
-COPY --from=builder /build /
-COPY docker/goflow2-collector/cmd/goflow2/mapping.yaml /
+COPY --from=builder /build  /
+COPY ./cmd/goflow2/mapping.yaml /
 
 ENTRYPOINT ["./goflow2"]
