Parametrize the output kafka topic by using an environment variable in GoFlow2 service

--- a/.env
+++ b/.env
@@ -19,3 +19,6 @@ WEAVER_URI=http://weaver:8080/notify
 DATA_LAKE_URI=https://2yd7m1wqii.execute-api.eu-west-2.amazonaws.com/v1
 DATA_LAKE_KEY=data_lake_key
 DATA_LAKE_REGION=eu-west-2
+
+# PALANTIR information
+KAFKA_TOPIC_NAME=flows
