--- a/docker-compose-palantir.yml
+++ b/docker-compose-palantir.yml
@@ -74,6 +74,8 @@ services:
        dockerfile: Dockerfile
     hostname: goflow2
     container_name: goflow2
+    environment:
+      - KAFKA_TOPIC_NAME=${KAFKA_TOPIC_NAME}
     ports:
       - 9995:9995/udp
     depends_on:
@@ -82,7 +84,7 @@ services:
     command:
     - -transport=kafka
     - -transport.kafka.brokers=kafka:9092
-    - -transport.kafka.topic=flows
+    - -transport.kafka.topic=${KAFKA_TOPIC_NAME}
     - -format=json
     - -listen=netflow://:9995
   kafka:
