--- a/.env
+++ b/.env
@@ -21,4 +21,4 @@ DATA_LAKE_KEY=data_lake_key
 DATA_LAKE_REGION=eu-west-2
 
 # PALANTIR information
-KAFKA_TOPIC_NAME=flows
+KAFKA_OUTPUT_TOPIC_GOFLOW2=flows
