--- a/kubernetes/netflow/services/goflow2.yaml
+++ b/kubernetes/netflow/services/goflow2.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: goflow2-ensemble
+  name: goflow2
 spec:
   replicas: 1
   selector:
@@ -14,14 +14,17 @@ spec:
     spec:
       containers:
       - name: gof2
-        image: digitalwonderland/zookeeper
+        image: 192.168.159.9:31320/goflow2:latest
         ports:
-        - containerPort: 2181
-        env:
-        - name: ZOOKEEPER_ID
-          value: "1"
-        - name: ZOOKEEPER_SERVER_1
-          value: zoo
+        - containerPort: 9995
+	- protocol: UDP
+        args:
+        - -transport=kafka
+        - -transport.kafka.brokers=kafka:9092
+        - -transport.kafka.topic=flows
+        - -format=json
+        - -listen=netflow://:9995  
+
 ---
 apiVersion: v1
 kind: Service
@@ -32,13 +35,8 @@ metadata:
 spec:
   ports:
   - name: client
-    port: 2181
-    protocol: TCP
-  - name: follower
-    port: 2888
-    protocol: TCP
-  - name: leader
-    port: 3888
-    protocol: TCP
+    port: 9995
+    protocol: UDP
+    targetPort: 9995
   selector:
-    app: zookeeper-app
+    app: goflow2-app
