--- a/kubernetes/netflow/Dockerfile
+++ b/kubernetes/netflow/Dockerfile
@@ -1,2 +1,2 @@
 FROM flink:1.14.3-scala_2.12-java11
-ADD netflow-driver-1.0-SNAPSHOT.jar /opt/flink/usrlib/
+ADD netflow-driver-1.0.jar /opt/flink/usrlib/
