--- a/kubernetes/flink-operator/flink-cluster-templates/netflow-driver/flinkoperator-flinkjobcluster-netflow.yaml
+++ b/kubernetes/flink-operator/flink-cluster-templates/netflow-driver/flinkoperator-flinkjobcluster-netflow.yaml
@@ -19,7 +19,7 @@ metadata:
 spec:
   flinkVersion: "1.14"
   image:
-    name: k8s-cluster:5000/netflow-driver:latest 
+    name: kubernetes:31320/netflow-driver:latest 
   jobManager:
     ports:
       ui: 8081
@@ -36,7 +36,7 @@ spec:
   job:
     jarFile: /opt/flink/usrlib/netflow-driver-1.0.jar
     className: tid.NetflowDriver
-    args: ["netflow-input-1", "netflow-output-1"]
+    args: ["kafka-service:9092", "netflow-output"]
     parallelism: 2
     restartPolicy: Never
   flinkProperties:
