Modify driver templates and jars
Modify driver templates and jars so they now are updated with feature-50 and there is no problem with the new yang model, as the goflow2 was updated but not the drivers

--- a/kubernetes/flink-operator/flink-cluster-templates/netflow/aggregation/flinkoperator-flinkjobcluster-netflow.yaml
+++ b/kubernetes/flink-operator/flink-cluster-templates/netflow/aggregation/flinkoperator-flinkjobcluster-netflow.yaml
@@ -35,7 +35,7 @@ spec:
         cpu: "500m"
   job:
     jarFile: /opt/flink/usrlib/netflowAggregator-1.0.jar
-    className: tid.netflowAggregator
+    className: tid.NetflowAggregator
     args: ["kafka-service:9092", "netflow-output-json", "netflow-output-aggreg"]
     parallelism: 2
     restartPolicy: Never
