Updating the version of the Flink service to 1.14.4 within the k8s templates and updating the JAR executables related to the Flink applications with the same version of Flink

--- a/kubernetes/flink-operator/flink-cluster-templates/flinkoperator-flinkjobcluster-sample.yaml
+++ b/kubernetes/flink-operator/flink-cluster-templates/flinkoperator-flinkjobcluster-sample.yaml
@@ -19,7 +19,7 @@ metadata:
 spec:
   flinkVersion: "1.14"
   image:
-    name: flink:1.14.2
+    name: flink:1.14.4-scala_2.12-java11
   batchSchedulerName: volcano
   jobManager:
     accessScope: Cluster
